<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/login_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_bg"
        android:adjustViewBounds="true"/>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:text="@string/uname"
            android:textSize="20sp"
            android:layout_marginLeft="5dp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_weight="0.75"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/unamehint"
            android:inputType="textPersonName" >
            <requestFocus></requestFocus>
            </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:text="@string/upass"
            android:textSize="20sp"
            android:layout_marginLeft="5dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_weight="0.75"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/upasshint"
            android:inputType="textPassword" >

        </EditText>

    </TableRow>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bule_btn"
        android:text="@string/ulogin"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/grey_btn"
        android:layout_marginTop="10dp"
        android:text="@string/uregister"/>

</LinearLayout>